--- a/notes.html
+++ b/notes.html
@@ -4,9 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>JavaScript Notes</title>
 </head>
 <body>
-    
+    <h1>Variables</h1>
+    <ul>
+        <li>Declared with keyword "var"</li>
+        <li>Initialized with "="</li>
+        <li>E.g. var und; (Undefined)</li>
+        <li>E.g. var float = 4.1;</li>
+    </ul>
+
+    <h1>Numbers</h1>
+    <ul>
+        <li>Can be written with and without decimal points</li>
+        <li>Numbers with decimal points are floats</li>
+        <li>Examples: var num = 4; var float = 0.2;</li>
+    </ul>
+
+    <h1>Strings</h1>
+    <ul>
+        <li>A literal type used to define text</li>
+        <li>Unlike in Python, JavaScript has no concept of a "character"</li>
+        <li>A single character is just a string with one character</li>
+        <li>Denoted by "" or ''</li>
+        <li>E.g. var string="a";</li>
+    </ul>
+
+    <h1>Objects</h1>
+    <ul>
+        <li>Similar to dictionaries in Python</li>
+        <li>They allow you to map keys to values</li>
+        <li>Denoted with {}</li>
+        <li>Keys can be accessed with either .keyname or ["keyname"]</li>
+        <li>
+            <ul>Example:
+                <li>var object = {</li>
+                <li>adam: "hello!",</li>
+                <li>zach-key: 4</li>
+                <li>}</li>
+            </ul>
+        </li>
+    </ul>
 </body>
 </html>
