--- a/notes.html
+++ b/notes.html
@@ -29,6 +29,7 @@
         <li>A single character is just a string with one character</li>
         <li>Denoted by "" or ''</li>
         <li>E.g. var string="a";</li>
+        <li>P.S. Strings are arrays of single characters ;(</li>
     </ul>
 
     <h1>Objects</h1>
@@ -37,8 +38,8 @@
         <li>They allow you to map keys to values</li>
         <li>Denoted with {}</li>
         <li>Keys can be accessed with either .keyname or ["keyname"]</li>
-        <li>
-            <ul>Example:
+        <li>Example:
+            <ul>
                 <li>var object = {</li>
                 <li>adam: "hello!",</li>
                 <li>zach-key: 4</li>
@@ -67,8 +68,8 @@
         <li>+ will concatenate two strings (or a string and a non-string)</li>
         <li>.length will return the number of characters in a string</li>
         <li>.indexOf(sub) will return the index of the substring</li>
-        <li>
-            <ul>Examples:
+        <li>Examples:
+            <ul>
                 <li>var concat = "hello" + "world"; // helloworld</li>
                 <li>var length = concat.length // 10</li>
                 <li>var indexWorld = concat.indexOf('world'); // 5</li>
@@ -90,8 +91,8 @@
         <li>.push(element) appends a value to the end of an array</li>
         <li>.pop() removes the last element in an array</li>
         <li>.length tells you the number of items in an array</li>
-        <li>
-            <ul>Examples:
+        <li>Examples:
+            <ul>
                 <li>var array = [4,2,"dog"];</li>
                 <li>array.push('&lAarr;'); // [4,2,"dog","&lAarr;"]</li>
                 <li>array.pop(); // [4,2,"dog"]</li>
@@ -104,8 +105,8 @@
     <ul>
         <li>They work the same way as in Python</li>
         <li>Instead of "elif", though, you use "else if"</li>
-        <li>
-            <ul>Example:
+        <li>Example:
+            <ul>
                 <li>if(answer == "Yes"){</li>
                 <li>// Code</li>
                 <li>} else if(answer == "Maybe"){</li>
@@ -123,8 +124,8 @@
         <li>The first statement is run before the loop starts</li>
         <li>The second statement is checked to decide whether the code should loop again</li>
         <li>The third statement is run after each loop</li>
-        <li>
-            <ul>Example:
+        <li>Example:
+            <ul>
                 <li>for (var i = 0; i < 10; i++){</li>
                 <li>console.log("HORSE!");</li>
                 <li>//this for loop will log "HORSE!" to the console 10 times</li>
