--- a/notes.html
+++ b/notes.html
@@ -116,6 +116,7 @@
                 <li>}</li>
             </ul>
         </li>
+        <li>P.S. if("string"){} // "string" is considered True since it's a non-empty string</li>
     </ul>
 
     <h1>For Loops</h1>
