--- a/notes.html
+++ b/notes.html
@@ -116,7 +116,7 @@
                 <li>}</li>
             </ul>
         </li>
-        <li>P.S. if("string"){} // "string" is considered True since it's a non-empty string</li>
+        <li>P.S. if("string"){} // "string" reads as True since it's a non-empty string</li>
     </ul>
 
     <h1>For Loops</h1>
