--- a/js-ex_12-7-18/basketball.html
+++ b/js-ex_12-7-18/basketball.html
@@ -5,9 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Basketball Exercise</title>
-    <script src="basketball.js"></script>
+    <style>
+        .question{
+            border-bottom:1px solid lightgray;
+            width:100%;}
+    </style>
 </head>
 <body>
-    
+    <div class="main-container" id="m-c">
+        <div class="time-container" id="ti-c"></div>
+        <div class="player-container" id="p-c"></div>
+        <div class="team-container" id="te-c"></div>
+    </div>
+    <script src="basketball.js"></script>
 </body>
 </html>
