Countdown Updates & Tic-Tac-Toe Beginnings

--- a/countdownTimer/index.html
+++ b/countdownTimer/index.html
@@ -25,6 +25,8 @@
 			<span class="small-text">DAYS</span>
 		</div>
 
+        <div class="break"></div>
+
 		<div class="time-unit"> <!-- 3 & 2-->
 			<span class="hours">0</span>
 			<span class="small-text">HOURS</span>		
