Proper Square Marking

--- a/Tic Tac Toe/index.html
+++ b/Tic Tac Toe/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
+    <div id="message"></div> <!--Holds messages for the players-->
     <div id="board">
         <div class="board-row">
             <button id="A1" class="square">-</button>
