--- a/Tic Tac Toe/index.html
+++ b/Tic Tac Toe/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
+    <!--<div id="option-container">
+        <div id="option-header"></div>
+        <div id="options">
+            <button id="single-btn">One Player</button>
+            <button id="multi-btn">Two Players</button>
+        </div>
+    </div>-->
     <div id="message">It's Player One's Turn!</div> <!--Holds messages for the players-->
     <div id="board">
         <div class="board-row">
@@ -27,6 +34,7 @@
             <button id="C3" class="square">-</button>
         </div>
     </div>
+    <button id="reset" class="reset-btn" onclick="resetGame()">RESET</button>
     <script src="script.js"></script>
 </body>
 </html>
