Reset Button Moves With Resized Screen

--- a/Tic Tac Toe/index.html
+++ b/Tic Tac Toe/index.html
@@ -34,7 +34,7 @@
             <button id="C3" class="square">-</button>
         </div>
     </div>
-    <button id="reset" class="reset-btn" onclick="resetGame()">RESET</button>
+    <button class="reset-btn" onclick="resetGame()">RESET</button>
     <script src="script.js"></script>
 </body>
 </html>
