Option Buttons and Start-up Overlay Added

--- a/Tic Tac Toe/index.html
+++ b/Tic Tac Toe/index.html
@@ -9,13 +9,12 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
-    <!--<div id="option-container">
-        <div id="option-header"></div>
-        <div id="options">
-            <button id="single-btn">One Player</button>
-            <button id="multi-btn">Two Players</button>
-        </div>
-    </div>-->
+    <div id="overlay"></div>
+    <div id="option-container">
+        <h1>How many players will be playing?</h1>
+        <button class="1p-btn" onclick="clearOverlay(event)">1 Player</button>
+        <button class="2p-btn" onclick="clearOverlay(event)">2 Player</button>
+    </div>
     <div id="message">It's Player One's Turn!</div> <!--Holds messages for the players-->
     <div id="board">
         <div class="board-row">
