TTT: Scoreboard V0.1 | Blackjack: First commit

--- a/Tic Tac Toe/index.html
+++ b/Tic Tac Toe/index.html
@@ -32,7 +32,11 @@
             <button id="B3" class="square">-</button>
             <button id="C3" class="square">-</button>
         </div>
-    </div>
+    </div><!--
+    <div id="score-board">
+        <div id="p1-score" class="score">Player 1 Score: 0</div>
+        <div id="p2-score" class="score">Player 2 Score: 0</div>
+    </div>-->
     <button class="reset-btn" onclick="resetGame()">RESET</button>
     <script src="script.js"></script>
 </body>
