--- a/Blackjack/index.html
+++ b/Blackjack/index.html
@@ -3,15 +3,33 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>BLACKJACK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-    <div class="table">
+    <div class="container">
+        <div class="table">
+        </div>
+        <div class="dealer-hand"></div>
+        <div class="player-hand"></div>
+        <div class="dealer-total"></div>
+        <div class="player-total"></div>
+        <div class="dealer-card-1"></div>
+        <div class="dealer-card-2"></div>
+        <div class="dealer-card-3"></div>
+        <div class="dealer-card-4"></div>
+        <div class="dealer-card-5"></div>
+        <div class="dealer-card-6"></div>
+        <div class="player-card-1"></div>
+        <div class="player-card-2"></div>
+        <div class="player-card-3"></div>
+        <div class="player-card-4"></div>
+        <div class="player-card-5"></div>
+        <div class="player-card-6"></div>
     </div>
-    <div class="dealer-hand"></div>
-    <div class="player-hand"></div>
+    <script src="main.js"></script>
 </body>
 </html>
