--- a/Blackjack/index.html
+++ b/Blackjack/index.html
@@ -5,30 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>BLACKJACK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="table">
+            <div class="player-total">0</div>
+            <div class="player-cards">
+                <div class="card card-1"></div>
+                <div class="card card-2"></div>
+                <div class="card card-3"></div>
+                <div class="card card-4"></div>
+                <div class="card card-5"></div>
+                <div class="card card-6"></div>
+            </div>
+            <div class="dealer-total">0</div>
+            <div class="dealer-cards">
+                <div class="card card-1"></div>
+                <div class="card card-2"></div>
+                <div class="card card-3"></div>
+                <div class="card card-4"></div>
+                <div class="card card-5"></div>
+                <div class="card card-6"></div>
+            </div>
+            <div class="buttons">
+                <button class="deal-btn">Deal</button>
+                <button class="hit-btn">Hit</button>
+                <button class="stand-btn">Stand</button>
+            </div>
         </div>
-        <div class="dealer-hand"></div>
-        <div class="player-hand"></div>
-        <div class="dealer-total"></div>
-        <div class="player-total"></div>
-        <div class="dealer-card-1"></div>
-        <div class="dealer-card-2"></div>
-        <div class="dealer-card-3"></div>
-        <div class="dealer-card-4"></div>
-        <div class="dealer-card-5"></div>
-        <div class="dealer-card-6"></div>
-        <div class="player-card-1"></div>
-        <div class="player-card-2"></div>
-        <div class="player-card-3"></div>
-        <div class="player-card-4"></div>
-        <div class="player-card-5"></div>
-        <div class="player-card-6"></div>
     </div>
     <script src="main.js"></script>
 </body>
