--- a/Blackjack/index.html
+++ b/Blackjack/index.html
@@ -11,23 +11,27 @@
 <body>
     <div class="container">
         <div class="table">
-            <div class="player-total">0</div>
-            <div class="player-cards">
-                <div class="card card-1"></div>
-                <div class="card card-2"></div>
-                <div class="card card-3"></div>
-                <div class="card card-4"></div>
-                <div class="card card-5"></div>
-                <div class="card card-6"></div>
+            <div class="dealer">
+                <div class="dealer-total">0</div>
+                <div class="dealer-cards">
+                    <div class="card card-1"></div>
+                    <div class="card card-2"></div>
+                    <div class="card card-3"></div>
+                    <div class="card card-4"></div>
+                    <div class="card card-5"></div>
+                    <div class="card card-6"></div>
+                </div>
             </div>
-            <div class="dealer-total">0</div>
-            <div class="dealer-cards">
-                <div class="card card-1"></div>
-                <div class="card card-2"></div>
-                <div class="card card-3"></div>
-                <div class="card card-4"></div>
-                <div class="card card-5"></div>
-                <div class="card card-6"></div>
+            <div class="player">
+                <div class="player-total">0</div>
+                <div class="player-cards">
+                    <div class="card card-1"></div>
+                    <div class="card card-2"></div>
+                    <div class="card card-3"></div>
+                    <div class="card card-4"></div>
+                    <div class="card card-5"></div>
+                    <div class="card card-6"></div>
+                </div>
             </div>
             <div class="buttons">
                 <button class="deal-btn">Deal</button>
