--- a/Blackjack/index.html
+++ b/Blackjack/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="table">
-            <div class="dealer">
+            <div class="row dealer">
                 <div class="dealer-total">0</div>
                 <div class="dealer-cards">
                     <div class="card card-1"></div>
@@ -22,7 +22,7 @@
                     <div class="card card-6"></div>
                 </div>
             </div>
-            <div class="player">
+            <div class="row player">
                 <div class="player-total">0</div>
                 <div class="player-cards">
                     <div class="card card-1"></div>
