Added reset btn (No functionality yet)

--- a/Blackjack/index.html
+++ b/Blackjack/index.html
@@ -10,9 +10,18 @@
 </head>
 <body>
     <div class="container">
+        <div class="scores">
+            <div class="dealer-score">
+                <span>Dealer:</span>
+                <span class="dealer-total">0</span>
+            </div>
+            <div class="player-score">
+                <span>Player:</span>
+                <span class="player-total">0</span>
+            </div>
+        </div>
         <div class="table">
             <div class="row dealer">
-                <div class="dealer-total">0</div>
                 <div class="dealer-cards">
                     <div class="card card-1"></div>
                     <div class="card card-2"></div>
@@ -23,7 +32,6 @@
                 </div>
             </div>
             <div class="row player">
-                <div class="player-total">0</div>
                 <div class="player-cards">
                     <div class="card card-1"></div>
                     <div class="card card-2"></div>
@@ -33,11 +41,12 @@
                     <div class="card card-6"></div>
                 </div>
             </div>
-            <div class="buttons">
-                <button class="deal-btn">Deal</button>
-                <button class="hit-btn">Hit</button>
-                <button class="stand-btn">Stand</button>
-            </div>
+        </div>
+        <div class="buttons">
+            <button class="btn deal-btn">Deal</button>
+            <button class="btn hit-btn">Hit</button>
+            <button class="btn stand-btn">Stand</button>
+            <button class="btn reset-btn">Reset</button>
         </div>
     </div>
     <script src="main.js"></script>
