--- a/Blackjack/index.html
+++ b/Blackjack/index.html
@@ -5,20 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>BLACKJACK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="scores">
-            <div class="dealer-score">
+            <h3>SCOREBOARD</h3>
+            <span class="dealer-score">
                 <span>Dealer:</span>
                 <span class="dealer-total">0</span>
-            </div>
-            <div class="player-score">
+            </span>
+            <span class="player-score">
                 <span>Player:</span>
                 <span class="player-total">0</span>
-            </div>
+            </span>
         </div>
         <div class="table">
             <div class="row dealer">
