More CSS Changes

--- a/Blackjack/index.html
+++ b/Blackjack/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>BLACKJACK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
@@ -45,10 +45,10 @@
             </div>
         </div>
         <div class="buttons">
-            <button class="btn deal-btn">Deal</button>
-            <button class="btn hit-btn">Hit</button>
-            <button class="btn stand-btn">Stand</button>
-            <button class="btn reset-btn">Reset</button>
+            <button class="btn deal-btn">DEAL</button>
+            <button class="btn hit-btn">HIT</button>
+            <button class="btn stand-btn">STAND</button>
+            <button class="btn reset-btn">RESET</button>
         </div>
     </div>
     <script src="main.js"></script>
