--- a/Memory Game/index.html
+++ b/Memory Game/index.html
@@ -5,10 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Memory Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script src="script.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center mg">
+                <h1>How difficult?</h1>
+                <button diff=4 class="btn btn-lg btn-success">Easy</button>
+                <button diff=12 class="btn btn-lg btn-warning">Medium</button>
+                <button diff=28 class="btn btn-lg btn-danger">Hard</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
