--- a/Memory Game/index.html
+++ b/Memory Game/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Memory Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-12 text-center mg">
+            <div class="col-sm-12 text-center mg">
                 <h1>How difficult?</h1>
                 <button diff=4 class="btn btn-lg btn-success">Easy</button>
                 <button diff=12 class="btn btn-lg btn-warning">Medium</button>
